--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0072DE</color>
+    <color name="screen_background">#F2F2F2</color>
+    <color name="transparent">#00000000</color>
+    <color name="item_background">#FCFCFC</color>
 
+    <color name="text_title">#FF252525</color>
+    <color name="text_content">#595757</color>
 </resources>
